--- a/content/index.njk
+++ b/content/index.njk
@@ -1,5 +1,7 @@
 ---
 layout: layouts/home.njk
+title: Chris Redrich
+subtitle: Notes and reflections for the journey.
 eleventyNavigation:
   key: Home
   order: 1
