--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -24,38 +24,41 @@
 		{#- Add an arbitrary string to the bundle #}
 		{%- css %}* { box-sizing: border-box; }{% endcss %}
 		{#- Add the contents of a file to the bundle #}
+		{%- css %}{% include "public/css/credrich.css" %}{% endcss %}
+		{%- css %}{% include "public/css/reset.css" %}{% endcss %}
 		{%- css %}{% include "public/css/index.css" %}{% endcss %}
+		{%- css %}{% include "public/css/credrich.css" %}{% endcss %}
 		{#- Or add from node_modules #}
 		{# {%- css %}{% include "node_modules/prismjs/themes/prism-okaidia.css" %}{% endcss %} #}
 
 		{#- Render the CSS bundle using Inlined CSS (for the fastest site performance in production) #}
-		<style>{% getBundle "css" %}</style>
+		{#- <style>{% getBundle "css" %}</style> #}
 		{#- Renders the CSS bundle using a separate file, if you can't set CSP directive style-src: 'unsafe-inline' #}
-		{#- <link rel="stylesheet" href="{% getBundleFileUrl "css" %}"> #}
+		<link rel="stylesheet" href="{% getBundleFileUrl "css" %}">
 	</head>
 	<body>
-		<a href="#skip" class="visually-hidden">Skip to main content</a>
-
 		<header>
-			<a href="/" class="home-link">{{ metadata.title }}</a>
-
-			{#- Read more about `eleventy-navigation` at https://www.11ty.dev/docs/plugins/navigation/ #}
+			<h1 class="logo"><a href="/">{{ metadata.title }}</a></h1>
 			<nav>
-				<h2 class="visually-hidden">Top level navigation menu</h2>
 				<ul class="nav">
-				{%- for entry in collections.all | eleventyNavigation %}
-					<li class="nav-item"><a href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a></li>
-				{%- endfor %}
+					{%- for entry in collections.all | eleventyNavigation %}
+						<li class="nav-item"><a href="{{ entry.url }}"{% if entry.url == page.url %} aria-current="page"{% endif %}>{{ entry.title }}</a></li>
+					{%- endfor %}
+					{% for tag in collections.all | getAllTags | filterTagList %}
+						{% set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
+						<li class="nav-item"><a href="{{ tagUrl }}" class="post-tag">{{ tag }}</a></li>
+					{% endfor %}
 				</ul>
 			</nav>
 		</header>
-
+		<hr/>
 		<main id="skip">
 			{{ content | safe }}
 		</main>
-
-		<footer></footer>
-
+		<hr />
+		<footer class="footer">&copy; {% copyrightDate %} by {{ metadata.title }}. All rights reserved.</footer>
 		<!-- This page `{{ page.url | htmlBaseUrl }}` was built on {% currentBuildDate %} -->
+		<div class="debug-grid"></div>
+  		<script>{% include "public/js/index.js" %}</script>
 	</body>
 </html>
