--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -24,7 +24,7 @@
 		{#- Add an arbitrary string to the bundle #}
 		{%- css %}* { box-sizing: border-box; }{% endcss %}
 		{#- Add the contents of a file to the bundle #}
-		{%- css %}{% include "public/css/credrich.css" %}{% endcss %}
+		{%- css %}{% include "public/css/custom.css" %}{% endcss %}
 		{%- css %}{% include "public/css/reset.css" %}{% endcss %}
 		{%- css %}{% include "public/css/index.css" %}{% endcss %}
 		{%- css %}{% include "public/css/credrich.css" %}{% endcss %}
